# Learning-Next.js

./: .gitignore  README.md
3. Introduce My Todo Manager/: Dockerfile
3. Introduce My Todo Manager/static-server-rs/: Cargo.toml
3. Introduce My Todo Manager/static-server-rs/src/: main.rs
3. Introduce My Todo Manager/static-server-rs/static/: 404.html  BookStore.html  DashBoard.html  Login.html  Main.html  SignUp.html  index.html
3. Introduce My Todo Manager/static-server-rs/static/NavBar/: NavBar.html
3. Introduce My Todo Manager/static-server-rs/static/_next/static/0B8jX2pHp1lfYs6eV4WSk/pages/: _app.js
3. Introduce My Todo Manager/static-server-rs/static/_next/static/6Su5cxauk2LgXhn6cpYVf/pages/: _app.js
3. Introduce My Todo Manager/static-server-rs/static/_next/static/chunks/: commons.0ba44a654dcb95e3b21a.js  commons.5f02b49fcbad22be8144.js  commons.e88e546d9e26458ebe0c.js  styles.2a3b464afeba0a2d956e.js  styles.524671b2c8edd53ce083.js  styles.js  styles.js.map
3. Introduce My Todo Manager/static-server-rs/static/_next/static/css/: styles.89475f22.chunk.css  styles.chunk.css
3. Introduce My Todo Manager/static-server-rs/static/_next/static/runtime/: main-370f655dda940c65f0b6.js  main-bc318fd7220cbd37cf97.js  main.js  webpack.js  webpack.js.map
3. Introduce My Todo Manager/static-server-rs/static/_next/static/webpack/: styles.eed8ec532ffaafaca1aa.hot-update.js.map
3. Introduce My Todo Manager/static-server-rs/static/meetuproom/: index.html
3. Introduce My Todo Manager/static-server-rs/static/static/: videoroomtest.js
(+198 files in other folders)
