[package]
name = "static-server-rs"
version = "0.1.0"
authors = ["Ted Park <itstedpark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[global]
address = "0.0.0.0"

[development]
address = "0.0.0.0"

[dependencies]
futures = "0.1"
env_logger = "0.5"
actix-web = "1.0.0-beta.4"
actix-files = "0.1.0-beta.4"